2010-10-06  Donal K. Fellows  <dkf@users.sf.net>

	* win/Makefile.in (genstubs): [Tcl Bug 3082049]: Typo.

2010-09-08  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkTreeview.c (TreeviewSeeCommand): [Bug 2829363]:
	Schedule redisplay if [$tv see] opens any items.

2010-09-02  Joe English  <jenglish@users.sourceforge.net>

	* library/ttk/winTheme.tcl, library/ttk/xpTheme.tcl,
	* library/ttk/vistaTheme.tcl: [Bug 3057573]: Specify disabled combobox
	text foreground color.

2010-09-01  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5.9 TAGGED FOR RELEASE ***

	* changes:	Updated for 8.5.9 release.

	* doc/menu.n:  Formatting error.

2010-09-01  Joe English  <jenglish@users.sourceforge.net>

	* library/ttk/entry.tcl: Revert keyboard navigation bindings
	to use real events instead of virtual events.

2010-08-31  Andreas Kupries  <andreask@activestate.com>

	* win/tcl.m4: Applied patch by Jeff fixing issues with the
	manifest handling on Win64.
	* win/configure: Regenerated.

2010-08-26  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkText.c (DumpLine): [Bug 3053347]:
	s/segPtr->size/currentSize/ throughout, but particularly in if
	lineChanged block where segPtr may no longer be valid.

	* unix/Makefile.in: add valgrind target
	* unix/configure, unix/tcl.m4: [Bug 1230554]: SHLIB_LD_LIBS='${LIBS}'
	for OSF1-V*. Add /usr/lib64 to set of auto-search dirs.
	(SC_PATH_X): Correct syntax error when xincludes not found.

	* win/Makefile.in (VC_MANIFEST_EMBED_DLL VC_MANIFEST_EMBED_EXE):
	* win/configure, win/configure.in, win/tcl.m4: SC_EMBED_MANIFEST
	macro and --enable-embedded-manifest configure arg added to support
	manifest embedding where we know the magic.  Help prevents DLL hell
	with MSVC8+.

2010-08-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* doc/ttk_spinbox.n (new), doc/ttk_*.3, doc/ttk_*.n:
	* generic/ttk/ttkGenStubs.tcl:
	* generic/ttk/ttk.decls, generic/ttk/ttkDecls.h:
	* generic/ttk/ttkButton.c, generic/ttk/ttkCache.c: